# division-overtime

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  division_compare_overtime.py  employeeKey.sample.csv  log_utils.py  notification_utils.py  overtime_result_saver.py  pyproject.toml  requirements.txt  slack_notifier.py  tatus
config/: default.toml  development.toml  production.toml.example
data/: employeeKey.sample.csv
docs/: architecture.md  migration.md  operations.md  release-checklist.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vitest.config.ts
scripts/: check_version.py  deploy-frontend.ps1  deploy.sh  install.sh  seed_development_data.py  verify.ps1  verify.sh
systemd/: division-overtime-employee-consistency.service  division-overtime-employee-consistency.timer  division-overtime-health.service  division-overtime-health.timer  division-overtime-threshold.service  division-overtime-threshold.timer  division-overtime-web.service  division-overtime-weekly.service  division-overtime-weekly.timer
tests/: test_cli.py  test_config.py  test_database.py  test_database_backup.py  test_employee_consistency.py  test_employee_management.py  test_employee_repository.py  test_employee_shadow.py  test_employee_source.py  test_employees.py  test_kot_employee_sync.py  test_message_formatter.py  test_policy.py  test_release_readiness.py  test_service.py  test_systemd_employee_consistency.py  test_web_app.py  test_web_auth.py  test_web_config.py  test_web_employees.py  test_web_kot_sync.py
(+35 files in other folders)
