[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "division-overtime"
version = "1.0.2"
description = "King of Time overtime monitoring and Slack notification service"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "jpholiday>=1.0.0,<2",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "slack-sdk>=3.33,<4",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "argon2-cffi>=23.1,<26",
]
dev = [
  "httpx2>=2.0,<3",
  "pytest>=8.3,<9",
  "ruff>=0.12,<1",
]

[project.scripts]
division-overtime = "division_overtime.cli:main"
division-overtime-web = "division_overtime.web.__main__:main"
division-overtime-web-hash-password = "division_overtime.web.password_hash:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
